[gd_scene load_steps=11 format=3 uid="uid://cu312wnpmmo8h"]

[ext_resource type="Script" uid="uid://rflsc6612a78" path="res://singleton/audio_manager.gd" id="1_xv1y8"]
[ext_resource type="AudioStream" uid="uid://ba6hcdic6iaev" path="res://audio/effects/explosion.wav" id="2_m6ohh"]
[ext_resource type="AudioStream" uid="uid://cv5qln1suuvrs" path="res://audio/effects/hit.wav" id="3_tqu67"]
[ext_resource type="AudioStream" uid="uid://cngewqy5c1mo4" path="res://audio/effects/railgun_fire.ogg" id="4_8gvws"]
[ext_resource type="AudioStream" uid="uid://bevmg7yxxigq" path="res://audio/effects/three_shots.ogg" id="5_frhj8"]
[ext_resource type="AudioStream" uid="uid://cc0vm327m7bwm" path="res://audio/effects/railgun.ogg" id="6_frhj8"]
[ext_resource type="AudioStream" uid="uid://bvabdpmyt4snu" path="res://audio/effects/thunder.ogg" id="7_62yln"]
[ext_resource type="AudioStream" uid="uid://bx158d4n2c7aa" path="res://audio/effects/turret_shot.ogg" id="8_wshm8"]
[ext_resource type="AudioStream" uid="uid://orfehh06257i" path="res://audio/effects/chopter_missile.ogg" id="9_r6ysb"]
[ext_resource type="AudioStream" uid="uid://c1cl74xgtqlfp" path="res://audio/effects/laser_ray.ogg" id="10_habyq"]

[node name="AudioManager" type="Node"]
script = ExtResource("1_xv1y8")

[node name="PlaneExplosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_m6ohh")
bus = &"SFX"

[node name="PlaneHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_tqu67")
bus = &"SFX"

[node name="EnemyRailgunFire" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_8gvws")
bus = &"SFX"

[node name="EnemyThreeGlobular" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_frhj8")
volume_db = -2.0
bus = &"SFX"

[node name="WeaponRailgun" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_frhj8")
bus = &"SFX"

[node name="WeaponThunder" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_62yln")
bus = &"SFX"

[node name="TurretShot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_wshm8")
bus = &"SFX"

[node name="ChopterMissile" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_r6ysb")
bus = &"SFX"

[node name="LaserRay" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_habyq")
bus = &"SFX"
